src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AS_400_Customer_Number__c</fullName>
        <externalId>true</externalId>
        <label>AS/400 Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agilone_Customer_Number__c</fullName>
        <label>AgilOne Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <description>For a customer&apos;s additional email, if applicable.</description>
        <inlineHelpText>For a customer&apos;s additional email, if applicable.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Associate_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer is an Associate.</description>
        <inlineHelpText>Check if this Customer is an Associate.</inlineHelpText>
        <label>Associate Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_ID__c</fullName>
        <label>Associate ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Order_Value__c</fullName>
        <label>Average Order Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Units_Per_Order__c</fullName>
        <label>Average Units Per Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bad_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer has given an invalid address.</description>
        <inlineHelpText>Check if this Customer has given an invalid address.</inlineHelpText>
        <label>Bad Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bad_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer has given an invalid Email address.</description>
        <inlineHelpText>Check if this Customer has given an invalid Email address.</inlineHelpText>
        <label>Bad Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catalog_Unsubscribe_Date__c</fullName>
        <label>Catalog Unsubscribe Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Continuity_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer is a member of the Continuity Program.</description>
        <inlineHelpText>Check if this Customer is a member of the Continuity Program.</inlineHelpText>
        <label>Continuity Program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_Customer_Notes__c</fullName>
        <label>Converted Customer Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Credit_Available__c</fullName>
        <label>Customer Credit Available</label>
        <summarizedField>Credit__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>Credit__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Notes__c</fullName>
        <label>Customer Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <displayFormat>1{000000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorites_Wish_List__c</fullName>
        <description>Use this field to manually track Customer Favorites or Items that they have expressed interest in.</description>
        <inlineHelpText>Use this field to manually track Customer Favorites or Items that they have expressed interest in.</inlineHelpText>
        <label>Favorites/Wish List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Order_Date__c</fullName>
        <label>First Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Fax__c</fullName>
        <label>International Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>International_Phone__c</fullName>
        <label>International Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Invoice_on_Outside_of_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the customer want the invoice on the outside of the box?</description>
        <inlineHelpText>Check if this Customer wants a printed invoice on the outside of their shipment.</inlineHelpText>
        <label>Invoice on Outside of Box?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lifetime_Customer_Value__c</fullName>
        <label>Lifetime Customer Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MasterContactID__c</fullName>
        <description>Master Contact ID from AgilOne Extracts</description>
        <externalId>true</externalId>
        <label>MasterContactID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Advertisements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Customer does not want to receive advertisements.</inlineHelpText>
        <label>No Advertisements?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Catalogs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer does not want to receive Catalogs.</description>
        <inlineHelpText>Check if this Customer does not want to receive Catalogs.</inlineHelpText>
        <label>No Catalogs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer does not want to receive a printed Invoice of their order with their shipment.</description>
        <inlineHelpText>Check if this Customer does not want to receive a printed Invoice of their order with their shipment.</inlineHelpText>
        <label>No Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Peanuts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer does not wish to have packing peanuts used with their shipment.</description>
        <inlineHelpText>Check if this Customer does not wish to have packing peanuts used with their shipment.</inlineHelpText>
        <label>No Peanuts?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Addresses__c</fullName>
        <label>Number of Addresses</label>
        <summaryForeignKey>Address__c.Customer__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCH_ID__c</fullName>
        <label>OCH ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Frequency__c</fullName>
        <label>Order Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Profile_Id__c</fullName>
        <label>Payment Profile ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible Fraud?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Customer&apos;s preferred point of contact.</description>
        <inlineHelpText>This is the Customer&apos;s preferred point of contact.</inlineHelpText>
        <label>Preferred CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMS_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store (only for VW)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ship_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer wishes their Order to be shipped only when able to be shipped in its entirety.</description>
        <inlineHelpText>Check if this Customer wishes their Order to be shipped only when able to be shipped in its entirety.</inlineHelpText>
        <label>Ship Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Shipping_Traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Shipping Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substitutes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this Customer does not want to receive substitute items or sizes.</description>
        <inlineHelpText>Check if this Customer does not want to receive substitute items or sizes.</inlineHelpText>
        <label>No Substitutes?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VW_Passport_Number__c</fullName>
        <label>VW Passport Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Customers_with_Credit</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>Customer_Credit_Available__c</columns>
        <columns>Lifetime_Customer_Value__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Credit_Available__c</field>
            <operation>greaterThan</operation>
            <value>USD 0</value>
        </filters>
        <label>*Customers with Credit</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>Last_Order_Date__c</columns>
        <columns>Lifetime_Customer_Value__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Payment_Profile_Id__c</columns>
        <filterScope>Mine</filterScope>
        <label>*My Customers</label>
    </listViews>
    <listViews>
        <fullName>Natures_Origin_Customer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Natures_Origin_Customer</value>
        </filters>
        <label>Nature&apos;s Origin Customer</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>*Customers New This Week</label>
    </listViews>
    <listViews>
        <fullName>Perfectly_Pure_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>AS_400_Customer_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Perfectly_Pure_Customer</value>
        </filters>
        <label>Perfectly Pure Customers</label>
    </listViews>
    <listViews>
        <fullName>Puritan_s_Pride_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>AS_400_Customer_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Puritans_Pride_Customer</value>
        </filters>
        <label>Puritan&apos;s Pride Customers</label>
    </listViews>
    <listViews>
        <fullName>Today_s_New</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s New</label>
    </listViews>
    <listViews>
        <fullName>Vitamin_World_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>AS_400_Customer_Number__c</columns>
        <columns>VW_Passport_Number__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>Last_Order_Date__c</columns>
        <columns>Lifetime_Customer_Value__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Vitamin_World_Customer</value>
        </filters>
        <label>Vitamin World Customers</label>
    </listViews>
    <recordTypes>
        <fullName>PP_Customer</fullName>
        <active>true</active>
        <label>PP Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>VW_Customer</fullName>
        <active>true</active>
        <label>VW Customer</label>
    </recordTypes>
</CustomObject>